# solvent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  package-lock.json  package.json
.ralph/: @fix_plan.md
circuits/: input.json  solvency.circom  solvency_bound.circom
contracts/solvency/: Cargo.toml
contracts/solvency/src/: lib.rs  poseidon_params.rs  test.rs  vk_data.rs  vk_data_bn254.rs
contracts/solvency/test_snapshots/test/: bls_solvent_and_insolvent_and_tampered.1.json  bn254_bound_verifies_and_marks_solvent.1.json  bn254_verifies_and_marks_solvent.1.json  inclusion_against_bound_root.1.json  issuers_do_not_collide.1.json  valid_proof_insufficient_reserve_is_insolvent.1.json  valid_proof_marks_solvent.1.json
docs/: index.html
docs/circuit/: solvency_final.zkey  verification_key.json
scripts/: attest.sh  build-circuit.sh  poseidon-gen.mjs
scripts/converter/: Cargo.toml  main.rs  main_bn254.rs
video/: VOICEOVER_CLIPS.md  build-voiced.sh  build.sh  clips.json
web/: index.html
web/circuit/: solvency.wasm
